tests/semantic/pass/label.c
// goto.c

int main()
{
  stop: ;
  stop2: ;
}
