tests/semantic/fail/pointer_diff5.c
int main(void) {
  int* iptr;
  char* cptr;
  iptr - cptr;
  return 0;
}
